# kambo-hive-lib

./: Cargo.toml  README.md
src/: lib.rs
src/common/: interfaces.rs  messages.rs  mod.rs  result.rs  task.rs
src/host/: mod.rs  periodic_saver.rs  result_aggregator.rs  server.rs  task_manager.rs
src/utils/: mod.rs
src/worker/: client.rs
